reworked and re-configured cucumber/integration tests